--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="click_me">Click Me</string>
+    <string name="click_me_in_basic_dialog">Click Me, I am in Basic Dialog</string>
 </resources>
